# Parallel-And-Distributed-Computing-Lab5

./: CMakeLists.txt  README.md  functions.c  main.c
